Fix align bug

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -145,9 +145,9 @@ section#menu {
   grid-area: menu;
 }
 
-section#menu #menuWrapper {
-  position: fixed;
-}
+// section#menu #menuWrapper {
+//   position: fixed;
+// }
 
 section#menu header {
   text-align: center;
